# weekly_report

./: .gitignore  README.md  biome.json  package.json
crates/cache/: Cargo.toml
crates/config/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/entities/: config.rs  mod.rs  report.rs  user.rs
crates/migrator/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  logging.rs  main.rs  traits.rs
crates/server/src/middleware/: auth.rs  data.rs  forwarded.rs  mod.rs
crates/server/src/routes/: mod.rs
web/: .postcssrc  index.html  package.json  tsconfig.json
web/public/: manifest.json
web/src/: index.tsx
web/src/lib/api/: index.ts
web/src/lib/assets/animates/: grass.tsx  logo-animate.css  logo-animate.tsx  spin.tsx
web/src/lib/assets/brands/: github.tsx  gitlab.tsx  google.tsx
web/src/lib/blocks/: background.tsx  darkmode-button.scss  darkmode-button.tsx  sidebar-layout.scss  sidebar-layout.tsx
web/src/lib/i18n/: en-us.json  index.ts  zh-cn.json
web/src/lib/markdown/: index.ts  interface.ts  katex.scss  prism.scss
web/src/lib/models/: article.ts  report.ts  user.ts  utils.ts
web/src/lib/storage/: account.ts  header.ts  platform.ts  route.ts  theme.ts  toast.ts
web/src/lib/utils/: hash.ts  loading-tips.ts  time.ts
web/src/lib/widgets/: article.tsx  avatar.tsx  card.tsx  dialog.tsx  divider.tsx  editor.tsx  icon.tsx  link.tsx  loading-tips.tsx  pagination.tsx  picture.tsx  popover.tsx  progress.tsx  select.tsx  splitter.tsx  tag.tsx  timer.tsx  toast.tsx
web/src/lib/widgets/styles/: article.scss  avatar.scss  base.scss  button.scss  divider.scss  editor.scss  input.scss  progress.scss  scrollbar.scss  skeleton.scss  splitter.scss  toast.scss
web/src/lib/widgets/styles/echarts/: cyber-dark.json  cyber-light.json
web/src/routes/: index.tsx  layout.tsx  routes.ts
web/src/routes/_blocks/: diy-box.tsx
web/src/routes/admin/: index.tsx
web/src/routes/sigtrap/: error.tsx
web/src/routes/submit/: index.tsx
web/src/routes/user/: layout.tsx
web/src/routes/user/[user]/: index.tsx
web/src/routes/user/_blocks/: sidebar.tsx
web/src/routes/week/: layout.tsx
web/src/routes/week/[week]/: index.tsx
web/src/routes/week/_blocks/: sidebar.tsx
