[package]
name = "wr-database"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "Database migrator for Weekly Report"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
publish = false
homepage = "https://wr.xdsec.org/"
resolver = "2"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
sea-orm = { version = "1.1", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
] }
sea-orm-migration = "1.1"
sea-query = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
tracing = "0.1"
