[package]
name = "wr-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "Server for Weekly Report"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
publish = false
homepage = "https://wr.xdsec.org/"
resolver = "2"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
axum = { version = "0.7", features = [
  "ws",
  "http2",
  "multipart",
  "macros",
  "tower-log",
  "tracing",
] }
axum-extra = { version = "0.9", features = [
  "typed-header",
  "query",
  "multipart",
  "typed-routing",
  "async-read-body",
] }