[package]
name = "wr-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "Server for Weekly Report"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
publish = false
homepage = "https://wr.xdsec.org/"
resolver = "2"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
axum = { version = "0.8", features = [
  "ws",
  "http2",
  "multipart",
  "macros",
  "tower-log",
  "tracing",
] }
axum-extra = { version = "0.10", features = [
  "typed-header",
  "query",
  "multipart",
  "cookie",
  "typed-routing",
  "async-read-body",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ring = "0.17"
hex = "0.4"
git-version = "0.3"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rustls = { version = "0.23", features = ["ring"] }
urlencoding = "2.1"
html-escape = "0.2"
mime = "0.3"

wr-database = { version = "0.1", path = "../database" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "wr-server"
path = "src/main.rs"
